--- a/week4/Java1week3/res/layout/layout.xml
+++ b/week4/Java1week3/res/layout/layout.xml
@@ -43,6 +43,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/textStyle" />
-    
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/buttonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:text="@string/listenNow" />
+
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
